--- a/Code/qtiplot/MantidQt/MantidWidgets/inc/MWDiag.ui
+++ b/Code/qtiplot/MantidQt/MantidWidgets/inc/MWDiag.ui
@@ -5,14 +5,14 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>388</width>
-    <height>377</height>
+    <width>377</width>
+    <height>382</height>
    </rect>
   </property>
   <property name="windowTitle" >
    <string>Form</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout" >
+  <layout class="QGridLayout" name="gridLayout_3" >
    <item row="0" column="0" >
     <widget class="QLabel" name="lbIFile" >
      <property name="enabled" >
@@ -35,7 +35,7 @@
      </property>
     </widget>
    </item>
-   <item row="0" column="1" colspan="3" >
+   <item row="0" column="1" colspan="4" >
     <widget class="QLineEdit" name="leIFile" >
      <property name="enabled" >
       <bool>true</bool>
@@ -51,23 +51,7 @@
      </property>
     </widget>
    </item>
-   <item row="0" column="4" >
-    <spacer name="horizontalSpacer_16" >
-     <property name="orientation" >
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="sizeType" >
-      <enum>QSizePolicy::Fixed</enum>
-     </property>
-     <property name="sizeHint" stdset="0" >
-      <size>
-       <width>20</width>
-       <height>20</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
-   <item row="0" column="5" >
+   <item row="0" column="6" >
     <widget class="QPushButton" name="pbIFile" >
      <property name="enabled" >
       <bool>true</bool>
@@ -96,10 +80,10 @@
      </property>
     </widget>
    </item>
-   <item row="1" column="1" colspan="3" >
+   <item row="1" column="1" colspan="4" >
     <widget class="QLineEdit" name="leOFile" />
    </item>
-   <item row="1" column="4" >
+   <item row="1" column="5" >
     <spacer name="horizontalSpacer_14" >
      <property name="orientation" >
       <enum>Qt::Horizontal</enum>
@@ -115,7 +99,7 @@
      </property>
     </spacer>
    </item>
-   <item row="1" column="5" >
+   <item row="1" column="6" >
     <widget class="QPushButton" name="pbOFile" >
      <property name="text" >
       <string>Browse</string>
@@ -123,7 +107,7 @@
     </widget>
    </item>
    <item row="2" column="0" >
-    <widget class="QLabel" name="lbError" >
+    <widget class="QLabel" name="lbSignificance" >
      <property name="sizePolicy" >
       <sizepolicy vsizetype="Expanding" hsizetype="Maximum" >
        <horstretch>0</horstretch>
@@ -160,7 +144,7 @@
      </property>
     </widget>
    </item>
-   <item row="2" column="2" >
+   <item row="2" column="3" >
     <spacer name="horizontalSpacer_15" >
      <property name="orientation" >
       <enum>Qt::Horizontal</enum>
@@ -176,14 +160,17 @@
      </property>
     </spacer>
    </item>
-   <item row="2" column="3" colspan="2" >
+   <item row="2" column="4" colspan="2" >
     <widget class="QCheckBox" name="ckAngles" >
+     <property name="enabled" >
+      <bool>false</bool>
+     </property>
      <property name="text" >
       <string>No Solid Angles</string>
      </property>
     </widget>
    </item>
-   <item row="3" column="0" colspan="6" >
+   <item row="3" column="0" colspan="7" >
     <widget class="QGroupBox" name="gbIndividual" >
      <property name="title" >
       <string>Individual White Beam Tests</string>
@@ -392,7 +379,7 @@
      </layout>
     </widget>
    </item>
-   <item row="4" column="0" colspan="6" >
+   <item row="4" column="0" colspan="7" >
     <widget class="QGroupBox" name="gbVariation" >
      <property name="title" >
       <string>Efficiency Variation Test</string>
@@ -489,40 +476,34 @@
      </layout>
     </widget>
    </item>
-   <item row="5" column="0" colspan="6" >
+   <item row="5" column="0" colspan="7" >
     <widget class="QGroupBox" name="gbBackTest" >
      <property name="title" >
       <string>Background check</string>
      </property>
-     <layout class="QGridLayout" name="gridLayout_3" >
-      <property name="margin" >
-       <number>2</number>
-      </property>
-      <item row="0" column="0" >
-       <widget class="QLabel" name="lbStartTime" >
+     <layout class="QGridLayout" name="gridLayout" >
+      <item row="0" column="0" colspan="2" >
+       <widget class="QCheckBox" name="ckDoBack" >
         <property name="text" >
-         <string>Start TOF</string>
+         <string>Check backgrounds</string>
         </property>
        </widget>
       </item>
-      <item row="0" column="1" >
-       <widget class="QLineEdit" name="leStartTime" />
-      </item>
-      <item row="0" column="2" >
-       <widget class="QLabel" name="lbEndTime" >
+      <item row="0" column="2" colspan="3" >
+       <widget class="QLabel" name="lbAcceptance" >
         <property name="text" >
-         <string>End TOF</string>
+         <string>Acceptance Factor</string>
         </property>
        </widget>
       </item>
-      <item row="0" column="3" >
-       <widget class="QLineEdit" name="leEndTime" />
+      <item row="0" column="5" >
+       <widget class="QLineEdit" name="leAcceptance" />
       </item>
-      <item row="0" column="4" >
+      <item row="0" column="6" >
        <widget class="QLabel" name="validator_label_3" >
         <property name="minimumSize" >
          <size>
-          <width>10</width>
+          <width>20</width>
           <height>20</height>
          </size>
         </property>
@@ -532,23 +513,91 @@
        </widget>
       </item>
       <item row="1" column="0" >
-       <widget class="QLabel" name="lbAcceptance" >
+       <widget class="QLabel" name="lbStartTime" >
         <property name="text" >
-         <string>Acceptance Factor</string>
+         <string>Start TOF</string>
         </property>
        </widget>
       </item>
-      <item row="1" column="1" >
-       <widget class="QLineEdit" name="leAcceptance" />
+      <item row="1" column="1" colspan="2" >
+       <widget class="QLineEdit" name="leStartTime" />
       </item>
-      <item row="1" column="2" colspan="2" >
+      <item row="1" column="4" >
+       <widget class="QLabel" name="lbEndTime" >
+        <property name="text" >
+         <string>End TOF</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="5" >
+       <widget class="QLineEdit" name="leEndTime" />
+      </item>
+      <item row="2" column="0" colspan="3" >
        <widget class="QCheckBox" name="ckZeroCounts" >
         <property name="text" >
-         <string>Find spectra with zero counts</string>
+         <string>Reject zero background</string>
         </property>
        </widget>
       </item>
+      <item row="1" column="3" >
+       <spacer name="horizontalSpacer" >
+        <property name="orientation" >
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeType" >
+         <enum>QSizePolicy::Fixed</enum>
+        </property>
+        <property name="sizeHint" stdset="0" >
+         <size>
+          <width>20</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item row="1" column="6" >
+       <spacer name="horizontalSpacer_2" >
+        <property name="orientation" >
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeType" >
+         <enum>QSizePolicy::Fixed</enum>
+        </property>
+        <property name="sizeHint" stdset="0" >
+         <size>
+          <width>20</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
      </layout>
+    </widget>
+   </item>
+   <item row="2" column="2" >
+    <widget class="QLabel" name="valErr" >
+     <property name="sizePolicy" >
+      <sizepolicy vsizetype="Fixed" hsizetype="Fixed" >
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="text" >
+      <string>*</string>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="5" >
+    <widget class="QLabel" name="valInmsk" >
+     <property name="sizePolicy" >
+      <sizepolicy vsizetype="Fixed" hsizetype="Fixed" >
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="text" >
+      <string>*</string>
+     </property>
     </widget>
    </item>
   </layout>
