--- a/Code/qtiplot/MantidQt/CustomInterfaces/inc/Excitations.ui
+++ b/Code/qtiplot/MantidQt/CustomInterfaces/inc/Excitations.ui
@@ -9,7 +9,7 @@
     <x>0</x>
     <y>0</y>
     <width>389</width>
-    <height>483</height>
+    <height>504</height>
    </rect>
   </property>
   <property name="windowTitle" >
@@ -153,40 +153,7 @@
           <bool>false</bool>
          </property>
          <layout class="QGridLayout" name="gridLayout_2" >
-          <item rowspan="2" row="0" column="0" colspan="3" >
-           <widget class="QLabel" name="loadRun_lbDiscrip" >
-            <property name="text" >
-             <string>Run Files</string>
-            </property>
-           </widget>
-          </item>
-          <item row="1" column="1" colspan="4" >
-           <widget class="QLineEdit" name="loadRun_lenumber" />
-          </item>
-          <item rowspan="2" row="0" column="5" >
-           <spacer name="horizontalSpacer_9" >
-            <property name="orientation" >
-             <enum>Qt::Horizontal</enum>
-            </property>
-            <property name="sizeType" >
-             <enum>QSizePolicy::Fixed</enum>
-            </property>
-            <property name="sizeHint" stdset="0" >
-             <size>
-              <width>20</width>
-              <height>20</height>
-             </size>
-            </property>
-           </spacer>
-          </item>
-          <item rowspan="2" row="0" column="6" colspan="2" >
-           <widget class="QPushButton" name="loadRun_pbBrowse" >
-            <property name="text" >
-             <string>Browse</string>
-            </property>
-           </widget>
-          </item>
-          <item row="2" column="0" colspan="2" >
+          <item row="1" column="0" colspan="2" >
            <widget class="QLabel" name="lbNorm" >
             <property name="toolTip" >
              <string comment="Select the type of normalization for the runs" >Select the type of normalization for the runs</string>
@@ -196,7 +163,7 @@
             </property>
            </widget>
           </item>
-          <item row="2" column="2" colspan="3" >
+          <item row="1" column="2" colspan="3" >
            <widget class="QComboBox" name="cbNormal" >
             <property name="sizePolicy" >
              <sizepolicy vsizetype="Fixed" hsizetype="Minimum" >
@@ -215,7 +182,7 @@
             </property>
            </widget>
           </item>
-          <item row="2" column="5" colspan="3" >
+          <item row="1" column="5" colspan="3" >
            <widget class="QComboBox" name="cbMonitors" >
             <property name="toolTip" >
              <string comment="Select the type of normalization for the runs" >Select the type of normalization for the runs</string>
@@ -225,14 +192,14 @@
             </property>
            </widget>
           </item>
-          <item row="3" column="0" colspan="2" >
+          <item row="2" column="0" colspan="2" >
            <widget class="QLabel" name="lbScale" >
             <property name="text" >
              <string>X10 to the</string>
             </property>
            </widget>
           </item>
-          <item row="3" column="2" >
+          <item row="2" column="2" >
            <widget class="QLineEdit" name="leScale" >
             <property name="sizePolicy" >
              <sizepolicy vsizetype="Fixed" hsizetype="Maximum" >
@@ -248,14 +215,14 @@
             </property>
            </widget>
           </item>
-          <item row="4" column="0" colspan="3" >
+          <item row="3" column="0" colspan="3" >
            <widget class="QPushButton" name="pbBack" >
             <property name="text" >
              <string>bg removal:</string>
             </property>
            </widget>
           </item>
-          <item row="4" column="3" >
+          <item row="3" column="3" >
            <widget class="QLabel" name="valBg" >
             <property name="sizePolicy" >
              <sizepolicy vsizetype="Minimum" hsizetype="Minimum" >
@@ -274,7 +241,7 @@
             </property>
            </widget>
           </item>
-          <item row="4" column="4" >
+          <item row="3" column="4" >
            <widget class="QCheckBox" name="ckSumSpecs" >
             <property name="sizePolicy" >
              <sizepolicy vsizetype="Fixed" hsizetype="Minimum" >
@@ -296,7 +263,7 @@
             </property>
            </widget>
           </item>
-          <item row="4" column="5" colspan="3" >
+          <item row="3" column="5" colspan="3" >
            <widget class="QCheckBox" name="ckFixEi" >
             <property name="text" >
              <string>Fix Ei</string>
@@ -304,36 +271,6 @@
            </widget>
           </item>
           <item row="5" column="0" colspan="2" >
-           <widget class="QLabel" name="lbWBV0" >
-            <property name="sizePolicy" >
-             <sizepolicy vsizetype="Expanding" hsizetype="Expanding" >
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
-            </property>
-            <property name="text" >
-             <string>White Beam Van</string>
-            </property>
-           </widget>
-          </item>
-          <item row="5" column="2" colspan="3" >
-           <widget class="QLineEdit" name="leWBV0" />
-          </item>
-          <item row="5" column="5" >
-           <widget class="QLabel" name="valWBV" >
-            <property name="text" >
-             <string>*</string>
-            </property>
-           </widget>
-          </item>
-          <item row="5" column="6" colspan="2" >
-           <widget class="QPushButton" name="pbWBV0" >
-            <property name="text" >
-             <string>Browse</string>
-            </property>
-           </widget>
-          </item>
-          <item row="6" column="0" colspan="2" >
            <widget class="QLabel" name="lbWBV0Low1" >
             <property name="sizePolicy" >
              <sizepolicy vsizetype="Expanding" hsizetype="Expanding" >
@@ -346,7 +283,7 @@
             </property>
            </widget>
           </item>
-          <item row="6" column="2" >
+          <item row="5" column="2" >
            <widget class="QLineEdit" name="leWBV0Low" >
             <property name="sizePolicy" >
              <sizepolicy vsizetype="Fixed" hsizetype="Maximum" >
@@ -368,14 +305,14 @@
             </property>
            </widget>
           </item>
-          <item row="6" column="3" >
+          <item row="5" column="3" >
            <widget class="QLabel" name="lbWBV0Low2" >
             <property name="text" >
              <string>meV</string>
             </property>
            </widget>
           </item>
-          <item row="6" column="4" >
+          <item row="5" column="4" >
            <spacer name="horizontalSpacer_3" >
             <property name="orientation" >
              <enum>Qt::Horizontal</enum>
@@ -391,14 +328,14 @@
             </property>
            </spacer>
           </item>
-          <item row="6" column="5" >
+          <item row="5" column="5" >
            <widget class="QLabel" name="lbWBV0High1" >
             <property name="text" >
              <string>High</string>
             </property>
            </widget>
           </item>
-          <item row="6" column="6" >
+          <item row="5" column="6" >
            <widget class="QLineEdit" name="leWBV0High" >
             <property name="sizePolicy" >
              <sizepolicy vsizetype="Fixed" hsizetype="Maximum" >
@@ -414,14 +351,14 @@
             </property>
            </widget>
           </item>
-          <item row="6" column="7" >
+          <item row="5" column="7" >
            <widget class="QLabel" name="lbWBV0High2" >
             <property name="text" >
              <string>meV</string>
             </property>
            </widget>
           </item>
-          <item row="7" column="0" colspan="2" >
+          <item row="6" column="0" colspan="2" >
            <widget class="QLabel" name="map_fileInput_lbName" >
             <property name="sizePolicy" >
              <sizepolicy vsizetype="Expanding" hsizetype="Expanding" >
@@ -434,10 +371,10 @@
             </property>
            </widget>
           </item>
-          <item row="7" column="2" colspan="3" >
+          <item row="6" column="2" colspan="3" >
            <widget class="QLineEdit" name="map_fileInput_leName" />
           </item>
-          <item row="7" column="5" >
+          <item row="6" column="5" >
            <widget class="QLabel" name="valMap" >
             <property name="sizePolicy" >
              <sizepolicy vsizetype="Minimum" hsizetype="Minimum" >
@@ -456,12 +393,38 @@
             </property>
            </widget>
           </item>
-          <item row="7" column="6" colspan="2" >
+          <item row="6" column="6" colspan="2" >
            <widget class="QPushButton" name="map_fileInput_pbBrowse" >
             <property name="text" >
              <string>Browse</string>
             </property>
            </widget>
+          </item>
+          <item row="0" column="2" >
+           <spacer name="verticalSpacer_4" >
+            <property name="orientation" >
+             <enum>Qt::Vertical</enum>
+            </property>
+            <property name="sizeHint" stdset="0" >
+             <size>
+              <width>20</width>
+              <height>10</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+          <item row="4" column="4" >
+           <spacer name="verticalSpacer_5" >
+            <property name="orientation" >
+             <enum>Qt::Vertical</enum>
+            </property>
+            <property name="sizeHint" stdset="0" >
+             <size>
+              <width>20</width>
+              <height>10</height>
+             </size>
+            </property>
+           </spacer>
           </item>
          </layout>
         </widget>
@@ -1324,16 +1287,12 @@
  <tabstops>
   <tabstop>tabWidget</tabstop>
   <tabstop>loadRun_cbInst</tabstop>
-  <tabstop>loadRun_lenumber</tabstop>
-  <tabstop>loadRun_pbBrowse</tabstop>
   <tabstop>cbNormal</tabstop>
   <tabstop>cbMonitors</tabstop>
   <tabstop>leScale</tabstop>
   <tabstop>pbBack</tabstop>
   <tabstop>ckSumSpecs</tabstop>
   <tabstop>ckFixEi</tabstop>
-  <tabstop>leWBV0</tabstop>
-  <tabstop>pbWBV0</tabstop>
   <tabstop>leWBV0Low</tabstop>
   <tabstop>leWBV0High</tabstop>
   <tabstop>map_fileInput_leName</tabstop>
