--- a/Code/qtiplot/MantidQt/MantidWidgets/inc/MWDiag.ui
+++ b/Code/qtiplot/MantidQt/MantidWidgets/inc/MWDiag.ui
@@ -31,7 +31,7 @@
       </size>
      </property>
      <property name="text" >
-      <string>Input Mask File</string>
+      <string>Hard Mask File</string>
      </property>
     </widget>
    </item>
@@ -401,7 +401,7 @@
         </property>
        </spacer>
       </item>
-      <item row="1" column="4" >
+      <item row="1" column="3" >
        <spacer name="horizontalSpacer_3" >
         <property name="orientation" >
          <enum>Qt::Horizontal</enum>
@@ -416,29 +416,6 @@
          </size>
         </property>
        </spacer>
-      </item>
-      <item row="0" column="0" >
-       <widget class="QLabel" name="lbWBV2" >
-        <property name="sizePolicy" >
-         <sizepolicy vsizetype="Expanding" hsizetype="Expanding" >
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="text" >
-         <string>WhiteBeamVan 2</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="1" colspan="3" >
-       <widget class="QLineEdit" name="leWBV2" />
-      </item>
-      <item row="0" column="4" >
-       <widget class="QPushButton" name="pbWBV2" >
-        <property name="text" >
-         <string>Browse</string>
-        </property>
-       </widget>
       </item>
       <item row="1" column="0" >
        <widget class="QLabel" name="lbVariation" >
@@ -466,12 +443,25 @@
         </property>
        </widget>
       </item>
-      <item row="1" column="5" >
+      <item row="1" column="4" >
        <widget class="QLabel" name="validator_label" >
         <property name="text" >
          <string/>
         </property>
        </widget>
+      </item>
+      <item row="0" column="1" >
+       <spacer name="verticalSpacer" >
+        <property name="orientation" >
+         <enum>Qt::Vertical</enum>
+        </property>
+        <property name="sizeHint" stdset="0" >
+         <size>
+          <width>0</width>
+          <height>10</height>
+         </size>
+        </property>
+       </spacer>
       </item>
      </layout>
     </widget>
