Placed MWRunFile widgets on the Excitations Group conversion interface and debugged refs #835

--- a/Code/qtiplot/MantidQt/MantidWidgets/inc/MWDiag.ui
+++ b/Code/qtiplot/MantidQt/MantidWidgets/inc/MWDiag.ui
@@ -76,7 +76,7 @@
       </size>
      </property>
      <property name="text" >
-      <string>Output Mask File</string>
+      <string>Output Mask</string>
      </property>
     </widget>
    </item>
@@ -188,19 +188,6 @@
       <property name="bottomMargin" >
        <number>2</number>
       </property>
-      <item row="0" column="0" >
-       <widget class="QLabel" name="lbWBV1" >
-        <property name="sizePolicy" >
-         <sizepolicy vsizetype="Expanding" hsizetype="Expanding" >
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="text" >
-         <string>White Beam Van1</string>
-        </property>
-       </widget>
-      </item>
       <item row="1" column="0" >
        <widget class="QLabel" name="lbHighAbs" >
         <property name="sizePolicy" >
@@ -328,9 +315,6 @@
         </property>
        </widget>
       </item>
-      <item row="0" column="1" colspan="4" >
-       <widget class="QLineEdit" name="leWBV1" />
-      </item>
       <item row="1" column="4" colspan="3" >
        <widget class="QLineEdit" name="leLowAbs" />
       </item>
@@ -353,13 +337,6 @@
         </property>
        </widget>
       </item>
-      <item row="0" column="6" >
-       <widget class="QPushButton" name="pbWBV1" >
-        <property name="text" >
-         <string>Browse</string>
-        </property>
-       </widget>
-      </item>
       <item row="2" column="3" >
        <widget class="QLabel" name="lbLowMed" >
         <property name="sizePolicy" >
@@ -375,6 +352,19 @@
          <bool>true</bool>
         </property>
        </widget>
+      </item>
+      <item row="0" column="1" >
+       <spacer name="verticalSpacer_2" >
+        <property name="orientation" >
+         <enum>Qt::Vertical</enum>
+        </property>
+        <property name="sizeHint" stdset="0" >
+         <size>
+          <width>20</width>
+          <height>10</height>
+         </size>
+        </property>
+       </spacer>
       </item>
      </layout>
     </widget>
