--- a/Code/qtiplot/MantidQt/CustomDialogs/inc/PlotAsymmetryByLogValueDialog.ui
+++ b/Code/qtiplot/MantidQt/CustomDialogs/inc/PlotAsymmetryByLogValueDialog.ui
@@ -10,7 +10,7 @@
    </rect>
   </property>
   <property name="windowTitle" >
-   <string>Dialog</string>
+   <string>PlotAsymmetryByLogValue</string>
   </property>
   <widget class="QDialogButtonBox" name="buttonBox" >
    <property name="geometry" >
