--- a/Code/qtiplot/MantidQt/CustomInterfaces/inc/Excitations.ui
+++ b/Code/qtiplot/MantidQt/CustomInterfaces/inc/Excitations.ui
@@ -13,7 +13,7 @@
    </rect>
   </property>
   <property name="windowTitle" >
-   <string>Convert Run Files</string>
+   <string>Excitations' Convert to Energy</string>
   </property>
   <layout class="QGridLayout" name="gridLayout_6" >
    <item row="1" column="1" >
