--- a/Code/qtiplot/MantidQt/CustomInterfaces/inc/Homer.ui
+++ b/Code/qtiplot/MantidQt/CustomInterfaces/inc/Homer.ui
@@ -1,6 +1,6 @@
 <ui version="4.0" >
- <class>Excitations</class>
- <widget class="QWidget" name="Excitations" >
+ <class>Homer</class>
+ <widget class="QWidget" name="Homer" >
   <property name="windowModality" >
    <enum>Qt::NonModal</enum>
   </property>
@@ -13,7 +13,7 @@
    </rect>
   </property>
   <property name="windowTitle" >
-   <string>Excitations' Convert to Energy</string>
+   <string>Homer</string>
   </property>
   <layout class="QGridLayout" name="gridLayout_6" >
    <item row="1" column="1" >
